# scribus

./: CMakeLists_Dependencies.cmake  ChangeLog  README.md  Scribus.pro  config.h.cmake  scribus.lsm
doc/en/: menu.xml  (+4 more)
docs/: .gitignore  AGENTS.md  glyph-cluster.md  package-lock.json  package.json  playwright.config.js  server.js  server.py  storytext.md  text-editing-flow.md  text-layout-algorithm.md
open-layout/: .gitignore  AGENTS.md  index.html  package.json  playwright.config.js  server.js
scribus/: CMakeLists_Sources.txt  actionmanager.cpp  appmodehelper.cpp  canvasgesture_cellselect.cpp  canvasgesture_cellselect.h  canvasgesture_rowresize.cpp  canvasgesture_rowresize.h  canvasmode.cpp  canvasmode.h  canvasmode_create.cpp  canvasmode_edittable.cpp  canvasmode_edittable.h  canvasmode_normal.cpp  documentchecker.cpp  documentchecker.h  iconmanager.cpp  iconmanager.h  main_nix.cpp  opticalmarginlookup.h  pageitem.cpp  pageitem.h  pageitem_latexframe.cpp  pageitem_table.cpp  pageitem_table.h  pageitem_textframe.h  prefsmanager.cpp  prefsmanager.h  prefsstructs.h  scribus.cpp  scribuscore.cpp  scribusdoc.cpp  scribusdoc.h  scribusstructs.h  scribusview.cpp  sctextcodec.cpp  sctextcodec.h  spellcheckfunctions.cpp  styleitem.h  tableborder.cpp  tableborder.h  (+8 more)
scribus/plugins/barcodegenerator/: CMakeLists.txt  barcode.cpp  barcode_ui.json  barcodegenerator.cpp  barcodegenerator.h  barcodegenerator.ui  barcodegeneratorrenderthread.cpp  barcodegeneratorrenderthread.h  install.targets
scribus/plugins/barcodegenerator/bwipp/: barcode.ps.src  postscriptbarcode_private.h
(+982 files in other folders)
